# object_detect

./: CMakeLists.txt  package.xml
src/: object_detect_core.cpp
